# valijson

./: .clang-format  .gitignore  .gitmodules  .travis.yml  AGENTS.md  Authors  CMakeLists.txt  Doxyfile  LICENSE  Makefile  PLAN.md  README.md  bundle.sh  cpp20.md  fuzz.md  jjtest.cc  polytest.cc  travis.sh  uri.md
.github/workflows/: cifuzz.yml  cmake.yml
cmake/: Findcurlpp.cmake
doc/design/: adapters.md  schema_parser.md  validation.md  visitor.cpp
doc/specifications/: draft-zyp-json-schema-03.txt
etc/: hello-world.document.invalid.json  hello-world.schema.json
examples/: array_iteration_basics.cpp  boost_json_example.cpp  check_schema.cpp  custom_schema.cpp  external_schema.cpp  picojson_format_test.cpp  remote_resolution_local_file.cpp  remote_resolution_url.cpp  valijson_benchmark.cpp  valijson_nlohmann_bundled.hpp  valijson_nlohmann_bundled_test.cpp
include/compat/: optional.hpp
include/valijson/: schema.hpp  schema_parser.hpp  schema_registry.hpp  subschema.hpp  validation_results.hpp  validation_visitor.hpp  validator.hpp
include/valijson/adapters/: adapter.hpp  basic_adapter.hpp  boost_json_adapter.hpp  frozen_value.hpp  json11_adapter.hpp  jsoncpp_adapter.hpp  nlohmann_json_adapter.hpp  picojson_adapter.hpp  poco_json_adapter.hpp  property_tree_adapter.hpp  qtjson_adapter.hpp  qvariant_adapter.hpp  rapidjson_adapter.hpp  std_string_adapter.hpp  yaml_cpp_adapter.hpp
include/valijson/constraints/: basic_constraint.hpp  concrete_constraints.hpp  constraint.hpp  constraint_visitor.hpp
include/valijson/internal/: basic_adapter.hpp  custom_allocator.hpp  double_parser.hpp  json_pointer.hpp  json_reference.hpp  optional.hpp  uri.hpp
include/valijson/utils/: file_utils.hpp  json11_utils.hpp  jsoncpp_utils.hpp  nlohmann_json_utils.hpp  picojson_utils.hpp  poco_json_utils.hpp  property_tree_utils.hpp  qvariant_utils.hpp  rapidjson_utils.hpp  utf8_utils.hpp
inspector/: CMakeLists.txt
inspector/cmake/: QtCommon.cmake
inspector/src/: window.cpp  window.h
scripts/: test.sh
temp/: AdapterPath.cc  AdapterPath.h
tests/: test_adapter_comparison.cpp  test_boost_json_adapter.cpp  test_date_time_format.cpp  test_dereference_callback.cpp  test_double_parser.cpp  test_fetch_document_callback.cpp  test_fetch_relative_uri_document_callback.cpp  test_json11_adapter.cpp  test_json_pointer.cpp  test_json_reference.cpp  test_jsoncpp_adapter.cpp  test_nlohmann_json_adapter.cpp  test_picojson_adapter.cpp  test_poco_json_adapter.cpp  test_poly_constraint.cpp  test_property_tree_adapter.cpp  test_qvariant_adapter.cpp  test_rapidjson_adapter.cpp  test_rapidjson_crt_allocator.cpp  test_schema_parser_dialects.cpp  test_uri.cpp  test_uri_resolution.cpp  test_utf8_utils.cpp  test_validation_errors.cpp  test_validator.cpp  test_validator_with_custom_regular_expression_engine.cpp  test_yaml_cpp_adapter.cpp
tests/data/documents/: array_doubles_1p5_2p5_3p5.json  date_time_format.json  object_property_number.json
tests/data/schemas/: additional_properties_number.schema.json  additional_properties_string.schema.json  circular_reference.schema.json  date_time_format.schema.json
tests/fuzzing/: fuzzer.cpp  oss-fuzz-build.sh
vcpkg/: portfile.cmake
xcode/valijson.xcodeproj/: project.pbxproj
